--- a/styles/style.css
+++ b/styles/style.css
@@ -2,13 +2,18 @@
 /* CSS REMEDY */
 /**************/
 *, *::after, *::before {
-  box-sizing:border-box;  
+  box-sizing:border-box;
+  padding: 0;
+  margin: 0;  
 }
 
 button, summary {
 	cursor: pointer;
 }
 
+* {
+	/*outline: 1px solid red;*/
+}
 
 
 
@@ -17,9 +22,13 @@ button, summary {
 /* CUSTOM PROPERTIES */
 /*********************/
 :root {
-	/* startje */
 	--color-text:#111;
-	--color-background:#eee;
+	--color-background:#fff;
+	--color-light-grey: #f5f5f5;
+	--color-grey: #ccc;
+
+	--color-brand: #0058AB;
+	--color-brand-secondary: #FBD914;
 }
 
 
@@ -32,8 +41,252 @@ button, summary {
 
 /* jouw code */
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+html {
+	max-width: 100vw;
+  overflow-x: hidden;
+}
+
+
 body {
   color:var(--color-text);
   background-color:var(--color-background);
+  max-width: 100vw;
+  overflow-x: hidden;
+  font-family: Noto Sans, sans-serif;
+  line-height: 1.4;
 }
+
+h1 {
+	font-size: 1.8em;
+	margin-top: 2em;
+}
+
+h2 {
+	font-size: 1.4em;
+	margin-bottom: .5em;
+}
+
+p {
+	margin-bottom: 1em;
+}
+
+a {
+	text-decoration: none;
+}
+
+
+
+/* HEADER */
+
+header {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 1.25em;
+	gap: 1.25em;
+	justify-content: space-between;
+	border-bottom: 1px solid var(--color-grey);
+}
+
+header nav ul {
+	display: flex;
+	list-style: none;
+	gap: 1.25em;
+}
+
+header nav li{
+	height: 2.75em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+header nav button {
+	border: none;
+	background-color: transparent;
+}
+
+header input {
+	flex-grow: 1;
+	background-color: var(--color-light-grey);
+	border: none;
+	font-size: 1em;
+	padding: .75em 1em;
+	border-radius: 2.5em;
+}
+
+
+
+
+
+
+main {
+	padding: 0 1.25em;
+}
+
+section {
+	margin: 3em 0;
+}
+
+
+/* BREADCRUMBS */
+
+main ol:first-of-type {
+	display: flex;
+	list-style: none;
+	margin: 1em 0;
+}
+
+main ol:first-of-type li:before {
+	content: '❯';
+	color: var(--color-grey);
+	padding: 1ch;
+}
+
+main ol:first-of-type li:first-of-type:before {
+	display: none;
+}
+
+main ol:first-of-type a{
+	color: var(--color-text);
+}
+
+
+
+/* SLIDERS */
+
+main ul {
+	display: flex;
+	gap: 1em;
+	list-style: none;
+	overflow-x: scroll;
+	padding: 1em 1.25em 2em 1.25em;
+	margin: 0 -1.25em;
+}
+
+main ul li {
+	position: relative;
+}
+
+main ul a {
+	color: var(--color-text);
+}
+
+/* Eerste slider */
+
+main > ul:first-of-type img {
+	width: 8em;
+	margin-bottom: 1em;
+}
+
+
+/* Tweede Slider */
+
+section:first-of-type ul img {
+	width: 60vw;
+}
+
+section:first-of-type ul a {
+	position: absolute;
+	bottom: 2em;
+	left: 50%;
+	transform: translate(-50%);
+	padding: .5em 1em;
+	border-radius: 2em;
+	z-index: 1;
+	background-color: white;
+}
+
+
+
+
+/* Slider Scrollbar */
+
+/* Height */
+main ul::-webkit-scrollbar {
+  height: 2px;
+}
+
+/* Track */
+main ul::-webkit-scrollbar-track {
+  background: var(--color-grey-100);
+  margin: 0 1.25em;
+}
+ 
+/* Handle */
+main ul::-webkit-scrollbar-thumb {
+  background: var(--color-text);
+}
+
+
+
+/* Lijst skip link */
+
+main ul li:first-of-type {
+	position: absolute;
+	transform: translateX(-100vw);
+}
+
+main ul li:first-of-type:focus-within {
+	position: static;
+	transform: translateX(0);
+}
+
+main ul li:first-of-type img {
+	width: 2em;
+	height: 2em;
+	margin: 0 2em;
+}
+
+main ul li:first-of-type a {
+	position: static;
+}
+
+
+
+/* GALLERY */
+
+section > section {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: auto repeat(7, 3em);
+	gap: .75em;
+	margin: 2em 0;
+}
+
+section section article {
+	overflow: hidden;
+}
+
+section section article img {
+	height: 100%;
+	display: block;
+}
+
+section:first-of-type section article:first-of-type {
+	grid-column: span 2;
+}
+
+section:first-of-type section article:first-of-type img {
+	width: 100%;
+}
+
+section:first-of-type section article:nth-of-type(2) {
+	grid-row: 2/5;
+}
+
+section:first-of-type section article:nth-of-type(3) {
+	grid-row: 2/6;
+}
+
+section:first-of-type section article:nth-of-type(4) {
+	grid-row: 5/9;
+}
+
+section:first-of-type section article:nth-of-type(5) {
+	grid-row: 6/9;
+}
+
+
 
