--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,9 @@ button, summary {
 
 	--color-brand: #0058AB;
 	--color-brand-secondary: #FBD914;
+	--color-succes: #1aa260;
+
+	--margin-main: 1.25rem;
 }
 
 
@@ -44,16 +47,14 @@ button, summary {
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 html {
-	max-width: 100vw;
-  overflow-x: hidden;
+	
 }
 
 
 body {
   color:var(--color-text);
   background-color:var(--color-background);
-  max-width: 100vw;
-  overflow-x: hidden;
+	width: 100vw;
   font-family: Noto Sans, sans-serif;
   line-height: 1.4;
 }
@@ -74,6 +75,20 @@ p {
 
 a {
 	text-decoration: none;
+	outline-color: var(--color-brand);
+}
+
+li:focus-within {
+	outline: 2px solid var(--color-brand);
+	border-radius: .5em;
+}
+
+li a {
+	outline: none;
+}
+
+li button {
+	outline: none;
 }
 
 
@@ -83,7 +98,7 @@ a {
 header {
 	display: flex;
 	flex-wrap: wrap;
-	padding: 1.25em;
+	padding: 1.25em var(--margin-main);
 	gap: 1.25em;
 	justify-content: space-between;
 	border-bottom: 1px solid var(--color-grey);
@@ -92,7 +107,8 @@ header {
 header nav ul {
 	display: flex;
 	list-style: none;
-	gap: 1.25em;
+	gap: .25em;
+	margin-right: -.5em;
 }
 
 header nav li{
@@ -100,6 +116,7 @@ header nav li{
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	padding: 0 .5em;
 }
 
 header nav button {
@@ -107,22 +124,44 @@ header nav button {
 	background-color: transparent;
 }
 
-header input {
+header form {
 	flex-grow: 1;
 	background-color: var(--color-light-grey);
 	border: none;
-	font-size: 1em;
-	padding: .75em 1em;
+	padding: 0.5em 1em;
 	border-radius: 2.5em;
+	display: flex;
+	justify-content: space-between;
+}
+
+header form:focus-within {
+	outline: 2px solid var(--color-brand);
+}
+
+header form input {
+	background: none;
+	border: none;
+	font-size: 1em;
+}
+
+header form input[type='search'] {
+	width: 100%;
+	outline: none;
+}
+
+header form input[type='submit'] {
+	background: url('../images/search.svg');
+	background-repeat: no-repeat;
+	background-size: contain;
+	width: 2em;
+	height: 2em;
 }
 
 
 
 
-
-
 main {
-	padding: 0 1.25em;
+	padding: 0 var(--margin-main);
 }
 
 section {
@@ -161,8 +200,8 @@ main ul {
 	gap: 1em;
 	list-style: none;
 	overflow-x: scroll;
-	padding: 1em 1.25em 2em 1.25em;
-	margin: 0 -1.25em;
+	padding: 1em var(--margin-main) 2em var(--margin-main);
+	margin: 0 calc(-1 * var(--margin-main)) 3em calc(-1 * var(--margin-main));
 }
 
 main ul li {
@@ -171,6 +210,7 @@ main ul li {
 
 main ul a {
 	color: var(--color-text);
+	hyphens: auto;
 }
 
 /* Eerste slider */
@@ -183,21 +223,46 @@ main > ul:first-of-type img {
 
 /* Tweede Slider */
 
-section:first-of-type ul img {
+.decoratie section:first-of-type ul:nth-of-type(2) img {
 	width: 60vw;
 }
 
-section:first-of-type ul a {
+.decoratie section:first-of-type ul:nth-of-type(2) a {
 	position: absolute;
 	bottom: 2em;
 	left: 50%;
 	transform: translate(-50%);
 	padding: .5em 1em;
 	border-radius: 2em;
-	z-index: 1;
-	background-color: white;
+	z-index: 1; 
+	background-color: var(--color-background);
+	hyphens: none;
 }
 
+
+/* Filters Slider */
+
+.planten section ul:first-of-type {
+	position: sticky;
+  top: 0;
+	display: flex;
+	margin: 0;
+	background-color: var(--color-background);
+	z-index: 3;
+	border-bottom: 1px solid var(--color-grey);
+}
+
+.planten section ul:first-of-type li {
+	width: 100%;
+}
+
+.planten section ul:first-of-type button {
+	white-space: nowrap;
+	padding: .5em 1em;
+	border: none;
+	border-radius: 1em;
+	font-size: 1em;
+}
 
 
 
@@ -210,13 +275,17 @@ main ul::-webkit-scrollbar {
 
 /* Track */
 main ul::-webkit-scrollbar-track {
-  background: var(--color-grey-100);
-  margin: 0 1.25em;
+  background: var(--color-light-grey);
+  margin: 0 var(--margin-main);
 }
  
 /* Handle */
 main ul::-webkit-scrollbar-thumb {
   background: var(--color-text);
+}
+
+section ul:has(button)::-webkit-scrollbar {
+	display: none;
 }
 
 
@@ -247,46 +316,177 @@ main ul li:first-of-type a {
 
 /* GALLERY */
 
-section > section {
+.decoratie section > ul:first-of-type {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: auto repeat(7, 3em);
 	gap: .75em;
 	margin: 2em 0;
+	overflow: auto;
+	padding: 1em 0;
 }
 
-section section article {
+.decoratie section ul:first-of-type li {
 	overflow: hidden;
 }
 
-section section article img {
+.decoratie section ul:first-of-type li img {
 	height: 100%;
 	display: block;
 }
 
-section:first-of-type section article:first-of-type {
+.decoratie section:first-of-type ul:first-of-type li:first-of-type {
 	grid-column: span 2;
+	position: static;
+	transform: none;
 }
 
-section:first-of-type section article:first-of-type img {
+.decoratie section:first-of-type ul:first-of-type li:first-of-type img {
 	width: 100%;
+	margin: 0;
 }
 
-section:first-of-type section article:nth-of-type(2) {
+section:first-of-type ul:first-of-type li:nth-of-type(2) {
 	grid-row: 2/5;
 }
 
-section:first-of-type section article:nth-of-type(3) {
+section:first-of-type ul:first-of-type li:nth-of-type(3) {
 	grid-row: 2/6;
 }
 
-section:first-of-type section article:nth-of-type(4) {
+section:first-of-type ul:first-of-type li:nth-of-type(4) {
 	grid-row: 5/9;
 }
 
-section:first-of-type section article:nth-of-type(5) {
+section:first-of-type ul:first-of-type li:nth-of-type(5) {
 	grid-row: 6/9;
 }
+
+
+/* PRODUCTEN GRID */
+
+.planten section {
+	position: relative;
+	background-color: var(--color-grey);
+	width: 100vw;
+	margin-left: calc(-1 * var(--margin-main));
+}
+
+.planten section ul:nth-of-type(2) {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(10em, 1fr));
+	gap: 1px;
+	margin: 0;
+	padding: 0;
+}
+
+.planten section ul li:first-of-type {
+	position: static;
+	transform: none;
+}
+
+.planten section ul:nth-of-type(2) li {
+	display: grid;
+	grid-template-columns: 3em 1fr;
+	width: 100%;
+	background-color: var(--color-background);
+	padding: .75em;
+}
+
+.planten section ul:nth-of-type(2) a {
+	grid-column: span 2;
+	text-transform: uppercase;
+	font-size: 1em;
+	margin: .5rem 0;
+}
+
+.planten section ul:nth-of-type(2) a:focus {
+	outline: 2px solid var(--color-brand);
+	border-radius: .5em;
+}
+
+.planten section ul:nth-of-type(2) h3 {
+	font-size: 1rem;
+}
+
+.planten section ul:nth-of-type(2) p {
+	grid-column: span 2;
+	display: flex;
+	align-items: center;
+}
+
+.planten section ul:nth-of-type(2) p:nth-of-type(3):before {
+	content: '';
+	background-color: var(--color-succes);
+	border-radius: .25rem;
+	height: .5rem;
+	aspect-ratio: 1/1;
+	vertical-align: center;
+	display: block;
+	margin-right: 1ch;
+}
+
+.planten section ul:nth-of-type(2) p:nth-of-type(4):before {
+	content: '';
+	background-color: var(--color-succes);
+	border-radius: .25rem;
+	width: .5rem;
+	height: .5rem;
+	vertical-align: center;
+	display: block;
+	margin-right: 1ch;
+}
+
+.planten section ul:nth-of-type(2) p {
+	grid-column: span 2;
+}
+
+.planten section ul:nth-of-type(2) p:nth-of-type(2) {
+	font-size: .8rem;
+	font-weight: bold;
+	align-items: flex-start;
+}
+
+.planten section ul:nth-of-type(2) li > img {
+	grid-column: span 2;
+	grid-row: 1;
+	width: 100%;
+	height: initial;
+	margin: 0;
+}
+
+.planten section ul:nth-of-type(2) li > button {
+	width: 2.5rem;
+	height: 2.5rem;
+	border-radius: 1.25rem;
+	border: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 1em;
+}
+
+.planten section ul:nth-of-type(2) li > button:focus {
+	outline: 2px solid var(--color-brand-secondary);
+	border-radius: .5em;
+}
+
+.planten section ul:nth-of-type(2) li > button:first-of-type {
+	background-color: var(--color-brand);
+}
+
+.planten section ul:nth-of-type(2) li > button > img {
+	width: 1.4rem;
+	height: 1.4rem;
+	margin: 0;
+}
+
+.planten span {
+	font-size: 1.2rem;
+	margin: 0 .1rem;
+	line-height: 1.4rem;
+}
+
 
 
 
