--- a/styles/style.css
+++ b/styles/style.css
@@ -484,6 +484,11 @@ section:first-of-type ul:first-of-type li:nth-of-type(5) {
 	padding: 0;
 }
 
+.planten section ul:nth-of-type(2) li:focus-within {
+	outline: none;
+	border-radius: 0;
+	}
+
 .planten section ul li:first-of-type {
 	position: static;
 	transform: none;
