--- a/styles/style.css
+++ b/styles/style.css
@@ -24,14 +24,33 @@ button, summary {
 :root {
 	--color-text:#111;
 	--color-background:#fff;
+	--color-input: #f5f5f5;
 	--color-light-grey: #f5f5f5;
 	--color-grey: #ccc;
+	--color-dark-grey: #999;
 
 	--color-brand: #0058AB;
 	--color-brand-secondary: #FBD914;
 	--color-succes: #1aa260;
+	--color-outline: var(--color-brand);
 
 	--margin-main: 1.25rem;
+}
+
+
+@media (prefers-color-scheme:dark) {
+
+	:root {
+		--color-text:#fff;
+		--color-background:#111;
+		--color-input: #555;
+		--color-light-grey: #555;
+		--color-grey: #999;
+		--color-dark-grey: #ccc;
+
+		--color-outline: var(--color-brand-secondary);
+	}
+
 }
 
 
@@ -45,10 +64,6 @@ button, summary {
 /* jouw code */
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-html {
-	
-}
 
 
 body {
@@ -75,11 +90,11 @@ p {
 
 a {
 	text-decoration: none;
-	outline-color: var(--color-brand);
+	outline-color: var(--color-outline);
 }
 
 li:focus-within {
-	outline: 2px solid var(--color-brand);
+	outline: 2px solid var(--color-outline);
 	border-radius: .5em;
 }
 
@@ -94,6 +109,11 @@ li button {
 button {
 	border: none;
 	background: none;
+}
+
+input[type="submit"]:focus-visible {
+	outline: 2px solid var(--color-brand-secondary);
+	border-radius: .5em;
 }
 
 
@@ -134,7 +154,7 @@ header nav:first-of-type a span{
 	border-radius: 1.2rem;
 	font-size: .8rem;
 	height: 1.2rem;
-	background-color: var(--color-brand);
+	background-color: var(--color-outline);
 	color: var(--color-background);
 	aspect-ratio: 1/1;
 	position: absolute;
@@ -145,9 +165,15 @@ header nav:first-of-type a span{
 	display: none;
 }
 
+header nav:first-of-type svg {
+	fill: var(--color-text);
+	width: 1.5rem;
+	aspect-ratio: 1/1;
+}
+
 header form {
 	flex-grow: 1;
-	background-color: var(--color-light-grey);
+	background-color: var(--color-input);
 	border: none;
 	padding: 0.5em 1em;
 	border-radius: 2.5em;
@@ -156,7 +182,7 @@ header form {
 }
 
 header form:focus-within {
-	outline: 2px solid var(--color-brand);
+	outline: 2px solid var(--color-outline);
 }
 
 header form input {
@@ -171,11 +197,15 @@ header form input[type='search'] {
 }
 
 header form input[type='submit'] {
-	background: url('../images/search.svg');
+	background-image: url(../images/search.svg);
 	background-repeat: no-repeat;
 	background-size: contain;
 	width: 2em;
 	height: 2em;
+}
+
+input::placeholder {
+	color: var(--color-dark-grey);
 }
 
 
@@ -193,7 +223,7 @@ header nav:nth-of-type(2) {
 	overflow-y: auto;
 	padding: 0 var(--margin-main);
 	transform: translateX(-100vw);
-	transition: .2s;
+	display: none;
 }
 
 header nav:nth-of-type(2) a {
@@ -218,10 +248,11 @@ header nav:nth-of-type(2) > a:nth-of-type(2) {
 	gap: .5em;
 }
 
-header nav:nth-of-type(2) > a:nth-of-type(2) img{
+header nav:nth-of-type(2) > a:nth-of-type(2) svg{
 	width: 1.4em;
 	height: 1.4em;
 	margin: 0;
+	fill: var(--color-text);
 }
 
 header nav:nth-of-type(2) > a img {
@@ -232,6 +263,13 @@ header nav:nth-of-type(2) > button:first-of-type {
 	position: fixed;
 	top: 1em;
 	right: 1em;
+}
+
+header nav:nth-of-type(2) > button svg {
+	width: 1.5em;
+	height: 1.5em;
+	fill: var(--color-text);
+	font-size: 1.5em;
 }
 
 header nav:nth-of-type(2) ul {
@@ -250,6 +288,11 @@ header nav:nth-of-type(2) ul:first-of-type {
 
 nav:nth-of-type(2).open {
 	transform: translateX(0);
+}
+
+nav:nth-of-type(2).show {
+	display: block;
+	transition: .2s;
 }
 
 
@@ -576,7 +619,7 @@ section:first-of-type ul:first-of-type li:nth-of-type(5) {
 	transition: .2s;
 }
 
-.planten section ul:nth-of-type(2) li > button:focus {
+.planten section ul:nth-of-type(2) li > button:focus-visible {
 	outline: 2px solid var(--color-brand-secondary);
 	border-radius: .5em;
 }
@@ -585,10 +628,18 @@ section:first-of-type ul:first-of-type li:nth-of-type(5) {
 	background-color: var(--color-brand);
 }
 
-.planten section ul:nth-of-type(2) li > button > img {
+.planten section ul:nth-of-type(2) li > button > svg {
 	width: 1.4rem;
 	height: 1.4rem;
 	margin: 0;
+}
+
+.planten section ul:nth-of-type(2) li > button:first-of-type > svg {
+	fill: white;
+}
+
+.planten section ul:nth-of-type(2) li > button:nth-of-type(2) > svg {
+	fill: var(--color-text);
 }
 
 .planten span {
@@ -599,6 +650,10 @@ section:first-of-type ul:first-of-type li:nth-of-type(5) {
 
 li.liked > button {
 	background-color: var(--color-brand-secondary);
+}
+
+.planten section ul:nth-of-type(2) li.liked > button:nth-of-type(2) > svg {
+	fill: #111;
 }
 
 
