--- a/styles/style.css
+++ b/styles/style.css
@@ -11,11 +11,6 @@ button, summary {
 	cursor: pointer;
 }
 
-* {
-	/*outline: 1px solid red;*/
-}
-
-
 
 
 /*********************/
@@ -24,7 +19,7 @@ button, summary {
 :root {
 	--color-text:#111;
 	--color-background:#fff;
-	--color-input: #f5f5f5;
+	--color-input: #ddd;
 	--color-light-grey: #f5f5f5;
 	--color-grey: #ccc;
 	--color-dark-grey: #999;
@@ -63,25 +58,33 @@ button, summary {
 
 /* jouw code */
 
+
+/* Google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
+/*Algemene Styling */
+
 body {
-  color:var(--color-text);
-  background-color:var(--color-background);
 	width: 100vw;
+
+  background-color:var(--color-background);
+
   font-family: Noto Sans, sans-serif;
   line-height: 1.4;
+  color:var(--color-text);
 }
 
 h1 {
-	font-size: 1.8em;
 	margin-top: 2em;
+
+	font-size: 1.8em;
 }
 
 h2 {
-	font-size: 1.4em;
 	margin-bottom: .5em;
+
+	font-size: 1.4em;
 }
 
 p {
@@ -89,13 +92,17 @@ p {
 }
 
 a {
-	text-decoration: none;
 	outline-color: var(--color-outline);
+
+	text-decoration: none;
 }
 
+
+/* focus states */
+
 li:focus-within {
-	outline: 2px solid var(--color-outline);
 	border-radius: .5em;
+	outline: 2px solid var(--color-outline);
 }
 
 li a {
@@ -107,13 +114,15 @@ li button {
 }
 
 button {
-	border: none;
 	background: none;
+
+	border: none;
 }
 
 input[type="submit"]:focus-visible {
-	outline: 2px solid var(--color-brand-secondary);
 	border-radius: .5em;
+
+	outline: 2px solid var(--color-brand-secondary);
 }
 
 
@@ -121,64 +130,78 @@ input[type="submit"]:focus-visible {
 /* HEADER */
 
 header {
+	position: sticky;
+	z-index: 5;
+	top: 0;
+	
 	display: flex;
+	justify-content: space-between;
 	flex-wrap: wrap;
 	padding: 1.25em var(--margin-main);
 	gap: 1.25em;
-	justify-content: space-between;
+
+	background-color: var(--color-background);
 	border-bottom: 1px solid var(--color-grey);
 }
 
 header nav:first-of-type ul {
 	display: flex;
-	list-style: none;
-	gap: .25em;
 	margin-right: -.5em;
+	gap: .25em;
+
+	list-style: none;
 }
 
 header nav:first-of-type li{
+	position: relative;
 	height: 2.75em;
+
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	padding: 0 .5em;
-	position: relative;
 }
 
 header nav:first-of-type button {
-	border: none;
 	background-color: transparent;
+	border: none;
 }
 
 header nav:first-of-type a span{
-	border-radius: 1.2rem;
-	font-size: .8rem;
-	height: 1.2rem;
-	background-color: var(--color-outline);
-	color: var(--color-background);
-	aspect-ratio: 1/1;
 	position: absolute;
 	top: -.1rem;
 	right: -.1rem;
+	height: 1.2rem;
+	aspect-ratio: 1/1;
+
+	display: none;
 	justify-content: center;
 	align-items: center;
-	display: none;
+
+	background-color: var(--color-outline);
+	border-radius: 1.2rem;
+	
+	font-size: .8rem;
+	color: var(--color-background);
 }
 
 header nav:first-of-type svg {
-	fill: var(--color-text);
 	width: 1.5rem;
 	aspect-ratio: 1/1;
+
+	fill: var(--color-text);
 }
 
 header form {
 	flex-grow: 1;
-	background-color: var(--color-input);
-	border: none;
-	padding: 0.5em 1em;
-	border-radius: 2.5em;
+
 	display: flex;
 	justify-content: space-between;
+	padding: 0.5em 1em;
+	
+	background-color: var(--color-input);
+	border: none;
+	border-radius: 2.5em;
 }
 
 header form:focus-within {
@@ -188,20 +211,23 @@ header form:focus-within {
 header form input {
 	background: none;
 	border: none;
+
 	font-size: 1em;
 }
 
 header form input[type='search'] {
 	width: 100%;
+
 	outline: none;
 }
 
 header form input[type='submit'] {
+	width: 2em;
+	height: 2em;
+
 	background-image: url(../images/search.svg);
 	background-repeat: no-repeat;
 	background-size: contain;
-	width: 2em;
-	height: 2em;
 }
 
 input::placeholder {
@@ -212,18 +238,20 @@ input::placeholder {
 /* Hamburger Menu */
 
 header nav:nth-of-type(2) {
-	background: var(--color-background);
 	position: fixed;
+	z-index: 5;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	height: 100vh;
-	z-index: 5;
-	overflow-y: auto;
-	padding: 0 var(--margin-main);
 	transform: translateX(-100vw);
+
 	display: none;
+	padding: 0 var(--margin-main);
+	overflow-y: auto;
+
+	background: var(--color-background);
 }
 
 header nav:nth-of-type(2) a {
@@ -231,27 +259,31 @@ header nav:nth-of-type(2) a {
 }
 
 header nav:nth-of-type(2) > a:first-of-type {
-	width: 100%;
-	background-color: var(--color-background);
 	position: fixed;
 	top: 0;
 	left: 0;
+	width: 100%;
+	
+	background-color: var(--color-background);
 }
 
 header nav:nth-of-type(2) > a:nth-of-type(2) {
 	width: 100%;
-	border-bottom: 1px solid var(--color-grey);
-	margin-top: 5em;
-	display: block;
-	padding-bottom: 1em;
+
 	display: flex;
+	margin-top: 5em;
+	padding-bottom: 1em;
 	gap: .5em;
+	
+	border-bottom: 1px solid var(--color-grey);
 }
 
 header nav:nth-of-type(2) > a:nth-of-type(2) svg{
 	width: 1.4em;
 	height: 1.4em;
+	
 	margin: 0;
+	
 	fill: var(--color-text);
 }
 
@@ -268,13 +300,16 @@ header nav:nth-of-type(2) > button:first-of-type {
 header nav:nth-of-type(2) > button svg {
 	width: 1.5em;
 	height: 1.5em;
-	fill: var(--color-text);
+	
 	font-size: 1.5em;
+
+	fill: var(--color-text);
 }
 
 header nav:nth-of-type(2) ul {
-	list-style: none;
 	margin-bottom: 3rem;
+
+	list-style: none;
 }
 
 header nav:nth-of-type(2) li {
@@ -292,10 +327,13 @@ nav:nth-of-type(2).open {
 
 nav:nth-of-type(2).show {
 	display: block;
+
 	transition: .2s;
 }
 
 
+
+/* MAIN */
 
 main {
 	padding: 0 var(--margin-main);
@@ -310,14 +348,17 @@ section {
 
 main ol:first-of-type {
 	display: flex;
-	list-style: none;
 	margin: 1em 0;
+
+	list-style: none;
 }
 
 main ol:first-of-type li:before {
 	content: '❯';
-	color: var(--color-grey);
+
 	padding: 1ch;
+
+	color: var(--color-grey);
 }
 
 main ol:first-of-type li:first-of-type:before {
@@ -334,11 +375,12 @@ main ol:first-of-type a{
 
 main ul {
 	display: flex;
-	gap: 1em;
-	list-style: none;
-	overflow-x: scroll;
 	padding: 1em var(--margin-main) 2em var(--margin-main);
 	margin: 0 calc(-1 * var(--margin-main)) 3em calc(-1 * var(--margin-main));
+	gap: 1em;
+	overflow-x: scroll;
+
+	list-style: none;
 }
 
 main ul li {
@@ -354,6 +396,7 @@ main ul a {
 
 main > ul:first-of-type img {
 	width: 8em;
+
 	margin-bottom: 1em;
 }
 
@@ -366,13 +409,16 @@ main > ul:first-of-type img {
 
 .decoratie section:first-of-type ul:nth-of-type(2) a {
 	position: absolute;
+	z-index: 1; 
 	bottom: 2em;
 	left: 50%;
 	transform: translate(-50%);
+	
 	padding: .5em 1em;
-	border-radius: 2em;
-	z-index: 1; 
+	
 	background-color: var(--color-background);
+	border-radius: 2em;
+	
 	hyphens: none;
 }
 
@@ -382,6 +428,7 @@ main > ul:first-of-type img {
 
 .decoratie section:first-of-type ul:nth-of-type(2) li:first-of-type img {
 	width: 8rem;
+
 	margin: 0;
 }
 
@@ -390,11 +437,13 @@ main > ul:first-of-type img {
 
 .planten section ul:first-of-type {
 	position: sticky;
+	z-index: 3;
   top: 0;
+
 	display: flex;
 	margin: 0;
+
 	background-color: var(--color-background);
-	z-index: 3;
 	border-bottom: 1px solid var(--color-grey);
 }
 
@@ -403,17 +452,19 @@ main > ul:first-of-type img {
 }
 
 .planten section ul:first-of-type button {
-	white-space: nowrap;
 	padding: .5em 1em;
+
+	background-color: var(--color-light-grey);
 	border: none;
 	border-radius: 1em;
+
 	font-size: 1em;
-	background-color: var(--color-light-grey);
+	white-space: nowrap;
 }
 
 
 
-/* Slider Scrollbar */
+/* Slider Scrollbar  // Bron scrollbar styling: https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp */
 
 /* Height */
 main ul::-webkit-scrollbar {
@@ -422,8 +473,9 @@ main ul::-webkit-scrollbar {
 
 /* Track */
 main ul::-webkit-scrollbar-track {
+	margin: 0 var(--margin-main);
+
   background: var(--color-light-grey);
-  margin: 0 var(--margin-main);
 }
  
 /* Handle */
@@ -452,6 +504,7 @@ main ul li:first-of-type:focus-within {
 main ul li:first-of-type img {
 	width: 2em;
 	height: 2em;
+	
 	margin: 0 2em;
 }
 
@@ -479,17 +532,21 @@ main ul li:first-of-type a {
 
 .decoratie section ul:first-of-type li img {
 	height: 100%;
+
 	display: block;
 }
 
 .decoratie section:first-of-type ul:first-of-type li:first-of-type {
 	grid-column: span 2;
-	position: static;
+
 	transform: none;
+
+	position: static;
 }
 
 .decoratie section:first-of-type ul:first-of-type li:first-of-type img {
 	width: 100%;
+
 	margin: 0;
 }
 
@@ -513,10 +570,12 @@ section:first-of-type ul:first-of-type li:nth-of-type(5) {
 /* PRODUCTEN GRID */
 
 .planten section {
-	position: relative;
-	background-color: var(--color-grey);
 	width: 100vw;
+
+	position: relative;
 	margin-left: calc(-1 * var(--margin-main));
+
+	background-color: var(--color-grey);
 }
 
 .planten section ul:nth-of-type(2) {
@@ -528,8 +587,8 @@ section:first-of-type ul:first-of-type li:nth-of-type(5) {
 }
 
 .planten section ul:nth-of-type(2) li:focus-within {
-	outline: none;
 	border-radius: 0;
+	outline: none;
 	}
 
 .planten section ul li:first-of-type {
@@ -538,23 +597,26 @@ section:first-of-type ul:first-of-type li:nth-of-type(5) {
 }
 
 .planten section ul:nth-of-type(2) li {
+	width: 100%;
+
 	display: grid;
 	grid-template-columns: 3em 1fr;
-	width: 100%;
-	background-color: var(--color-background);
 	padding: .75em;
+
+	background-color: var(--color-background);
 }
 
 .planten section ul:nth-of-type(2) a {
 	grid-column: span 2;
-	text-transform: uppercase;
-	font-size: 1em;
 	margin: .5rem 0;
+
+	font-size: 1em;
+	text-transform: uppercase;
 }
 
 .planten section ul:nth-of-type(2) a:focus {
-	outline: 2px solid var(--color-brand);
 	border-radius: .5em;
+	outline: 2px solid var(--color-brand);
 }
 
 .planten section ul:nth-of-type(2) h3 {
@@ -563,30 +625,23 @@ section:first-of-type ul:first-of-type li:nth-of-type(5) {
 
 .planten section ul:nth-of-type(2) p {
 	grid-column: span 2;
+
 	display: flex;
 	align-items: center;
 }
 
-.planten section ul:nth-of-type(2) p:nth-of-type(3):before {
+.planten section ul:nth-of-type(2) p:nth-of-type(3):before, .planten section ul:nth-of-type(2) p:nth-of-type(4):before {
 	content: '';
-	background-color: var(--color-succes);
-	border-radius: .25rem;
+
 	height: .5rem;
 	aspect-ratio: 1/1;
-	vertical-align: center;
-	display: block;
-	margin-right: 1ch;
-}
 
-.planten section ul:nth-of-type(2) p:nth-of-type(4):before {
-	content: '';
+	display: block;
+	vertical-align: center;
+	margin-right: 1ch;
+
 	background-color: var(--color-succes);
 	border-radius: .25rem;
-	width: .5rem;
-	height: .5rem;
-	vertical-align: center;
-	display: block;
-	margin-right: 1ch;
 }
 
 .planten section ul:nth-of-type(2) p {
@@ -594,34 +649,40 @@ section:first-of-type ul:first-of-type li:nth-of-type(5) {
 }
 
 .planten section ul:nth-of-type(2) p:nth-of-type(2) {
+	align-items: flex-start;
+
 	font-size: .8rem;
 	font-weight: bold;
-	align-items: flex-start;
 }
 
 .planten section ul:nth-of-type(2) li > img {
 	grid-column: span 2;
 	grid-row: 1;
+	
 	width: 100%;
 	height: initial;
+	
 	margin: 0;
 }
 
 .planten section ul:nth-of-type(2) li > button {
 	width: 2.5rem;
 	height: 2.5rem;
-	border-radius: 1.25rem;
-	border: none;
+
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	margin-bottom: 1em;
+
+	border: none;
+	border-radius: 1.25rem;
+	
 	transition: .2s;
 }
 
 .planten section ul:nth-of-type(2) li > button:focus-visible {
-	outline: 2px solid var(--color-brand-secondary);
 	border-radius: .5em;
+	outline: 2px solid var(--color-brand-secondary);
 }
 
 .planten section ul:nth-of-type(2) li > button:first-of-type {
@@ -631,6 +692,7 @@ section:first-of-type ul:first-of-type li:nth-of-type(5) {
 .planten section ul:nth-of-type(2) li > button > svg {
 	width: 1.4rem;
 	height: 1.4rem;
+	
 	margin: 0;
 }
 
@@ -643,8 +705,9 @@ section:first-of-type ul:first-of-type li:nth-of-type(5) {
 }
 
 .planten span {
-	font-size: 1.2rem;
 	margin: 0 .1rem;
+	
+	font-size: 1.2rem;
 	line-height: 1.4rem;
 }
 
@@ -656,6 +719,41 @@ li.liked > button {
 	fill: #111;
 }
 
+
+
+/* LASER */
+
+
+.laser {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	width: 2px;
+	transform-origin: top center;
+
+	display: none;
+	
+	background-color: red;
+	box-shadow: 0 0 3px red;
+}
+
+.laser.on {
+	display: block;
+
+	animation: laser .5s;
+}
+
+@keyframes laser {
+	0% {
+		opacity: .8;
+	}
+	20% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
 
 
 
